Time: 1 ms (55.14%), Space: 42.8 MB (35.64%) - LeetHub